homework_1/k8s/otus-homework-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-1-service # The resource name
  namespace: otus
spec:
  type: ClusterIP # Provides the Service on the internal IP of the cluster
  selector:
    app: homework-1
  ports:
    - protocol:   TCP
      port:       8000 # Service port
      targetPort: 8000 # Application port inside pod labeled 'homework-1'
