homework_1/k8s/otus-homework-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-1-ingress
  namespace: otus
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/health/?$ /health break;
      rewrite ^/otusapp/dmitry/(.+)$ /$1 break;
      return 404;
spec:
  ingressClassName: nginx # kube v1.22+
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homework-1-service
                port:
                  number: 8000
